--- a/custom_components/npm_switches/translations/fr.json
+++ b/custom_components/npm_switches/translations/fr.json
@@ -24,7 +24,12 @@
                 "data": {
                     "binary_sensor": "Capteur binaire activé",
                     "sensor": "Capteur activé",
-                    "switch": "Interrupteur activé"
+                    "switch": "Interrupteur activé",
+                    "include_proxy_hosts": "Inclure les hôtes proxy",
+                    "include_redirection_hosts": "Inclure les hôtes de redirection",
+                    "include_stream_hosts": "Inclure les hôtes de flux",
+                    "include_dead_hosts": "Inclure les hôtes morts",
+                    "include_enable_disable_count_sensors": "Inclure les capteurs de comptage activés/désactivés"
                 }
             }
         }
