--- a/custom_components/npm_switches/translations/nb.json
+++ b/custom_components/npm_switches/translations/nb.json
@@ -24,7 +24,12 @@
                 "data": {
                     "binary_sensor": "Binær sensor aktivert",
                     "sensor": "Sensor aktivert",
-                    "switch": "Bryter aktivert"
+                    "switch": "Bryter aktivert",
+                    "include_proxy_hosts": "Inkluder proxy-verter",
+                    "include_redirection_hosts": "Inkluder omdirigeringsverter",
+                    "include_stream_hosts": "Inkluder strømverter",
+                    "include_dead_hosts": "Inkluder døde verter",
+                    "include_enable_disable_count_sensors": "Inkluder aktiverte/deaktiverte tellesensorer"
                 }
             }
         }
