--- a/custom_components/npm_switches/translations/en.json
+++ b/custom_components/npm_switches/translations/en.json
@@ -7,7 +7,12 @@
                 "data": {
                     "username": "Username",
                     "password": "Password",
-                    "npm_url": "NPM URL including UI port number ex. http://ip:port"
+                    "npm_url": "NPM URL including UI port number ex. http://ip:port",
+                    "include_proxy_hosts": "Include Proxy Hosts",
+                    "include_redirection_hosts": "Include Redirection Hosts",
+                    "include_stream_hosts": "Include Stream Hosts",
+                    "include_dead_hosts": "Include Dead Hosts",
+                    "include_enable_disable_count_sensors": "Include Enabled/Disabled Count Sensors"
                 }
             }
         },
@@ -23,12 +28,7 @@
             "user": {
                 "data": {
                     "sensor": "Sensor enabled",
-                    "switch": "Switch enabled",
-                    "include_proxy_hosts": "Include Proxy Hosts",
-                    "include_redirection_hosts": "Include Redirection Hosts",
-                    "include_stream_hosts": "Include Stream Hosts",
-                    "include_dead_hosts": "Include Dead Hosts",
-                    "include_enable_disable_count_sensors": "Include Enabled/Disabled Count Sensors"
+                    "switch": "Switch enabled"
                 }
             }
         }
