--- a/custom_components/npm_switches/translations/nb.json
+++ b/custom_components/npm_switches/translations/nb.json
@@ -12,7 +12,8 @@
                     "include_redirection_hosts": "Inkluder omdirigeringsverter",
                     "include_stream_hosts": "Inkluder strømverter",
                     "include_dead_hosts": "Inkluder døde verter",
-                    "include_enable_disable_count_sensors": "Inkluder aktiverte/deaktiverte tellesensorer"
+                    "include_enable_disable_count_sensors": "Inkluder aktiverte/deaktiverte tellesensorer",
+                    "include_certificate_sensors": "Inkluder sertifikatsensorer og knapper"
                 }
             }
         },
